--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -4,7 +4,7 @@
     padding-right: 70px;
 }
 
-.portfolio_title {
+.portfolio__title {
     padding-bottom: 50px;
 
     font-weight: 400;
@@ -13,23 +13,23 @@
     color: #424242;
 }
 
-.portfolio_container {
+.portfolio__container {
     display: flex;
     flex-direction: column;
 }
 
-.portfolio_particle {
+.portfolio__particle {
     border-bottom: #424242 1px solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.portfolio_particle:last-child {
+.portfolio__particle:last-child {
     border-bottom: none;
 }
 
-.portfolio_link {
+.portfolio__link {
     font-weight: 400;
     font-size: 30px;
     line-height: 50px;
@@ -40,7 +40,7 @@
     text-decoration: none;
 }
 
-.portfolio_arrow {
+.portfolio__arrow {
     font-weight: 400;
     font-size: 30px;
     line-height: 60px;
@@ -54,27 +54,27 @@
         padding-right: 50px;
     }
 
-    .portfolio_link {
+    .portfolio__link {
         font-size: 28px;
     }
 
-    .portfolio_arrow {
+    .portfolio__arrow {
         font-size: 28px;
     }
 }
 
 @media screen and (max-width: 560px) {
-    .portfolio_link {
+    .portfolio__link {
         font-size: 18px;
         line-height: 28px;
     }
 
-    .portfolio_arrow {
+    .portfolio__arrow {
         font-size: 18px;
         line-height: 28px;
     }
 
-    .portfolio_title {
+    .portfolio__title {
         padding-bottom: 40px;
 
         font-size: 14px;
