--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,32 +5,32 @@
     padding-bottom: 20px;
 }
 
-.footer_text {
+.footer__text {
     font-weight: 400;
     font-size: 13px;
     line-height: 16px;
 }
 
-.footer_title {
+.footer__title {
     padding-bottom: 20px;
 
     text-align: center;
     color: #8B8B8B;
 }
 
-.footer_container {
+.footer__container {
     border-top: #424242 1px solid;
     padding-top: 20px;
     display: flex;
     justify-content: space-between;
 }
 
-.footer_links {
+.footer__links {
     display: flex;
     gap: 20px;
 }
 
-.footer_link {
+.footer__link {
     color: #FFFFFF;
     text-decoration: none;
 }
@@ -48,24 +48,24 @@
         padding-right: 10px;
     }
 
-    .footer_text {
+    .footer__text {
         font-size: 12px;
         line-height: 15px;
     }
 
-    .footer_year {
+    .footer__year {
         text-align: center;
         color: #8B8B8B;
     }
 
-    .footer_container {
+    .footer__container {
         flex-direction: column-reverse;
         align-items: center;
         padding-top: 30px;
         gap: 30px;
     }
 
-    .footer_links {
+    .footer__links {
         flex-direction: column;
         align-items: center;
         gap: 12px;
