--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -6,18 +6,19 @@
     justify-content: space-between;
 }
 
-.nav_logo {
+.nav__logo {
     background-image: url(/src/images/vectors/logo.svg);
     width: 38px;
     height: 38px;
+
 }
 
-.nav_logo-link {
+.nav__logo-link {
     width: 38px;
     height: 38px;
 }
 
-.nav_buttons {
+.nav__buttons {
     display: flex;
     font-weight: 500;
     font-size: 12px;
@@ -27,11 +28,12 @@
     align-items: center;
 }
 
-.nav_signup {
+.nav__signup {
     color: #FFFFFF;
 }
 
-.nav_signin {
+.nav__signin {
+    color: #000000;
     background: #3DDC84;
     border-radius: 3px;
     height: 32px;
@@ -44,13 +46,13 @@
         padding-left: 30px;
     }
 
-    .nav_buttons {
+    .nav__buttons {
         padding-right: 30px;
     }
 }
 
 @media screen and (max-width: 350px) {
-    .nav_signin {
+    .nav__signin {
         margin-left: 14px;
         height: 26px;
         width: 54px;
@@ -60,7 +62,7 @@
         padding-left: 14px;
     }
 
-    .nav_buttons {
+    .nav__buttons {
         padding-right: 14px;
         font-size: 10px;
     }
