--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.promo_banner {
+.promo__banner {
     width: 100%;
     height: 100%;
     background: #272727;
@@ -18,7 +18,7 @@
     border-radius: 10px;
 }
 
-.promo_title {
+.promo__title {
     letter-spacing: -0.04em;
     padding-left: 10px;
     padding-right: 10px;
@@ -31,14 +31,17 @@
     text-align: center;
 }
 
-.promo_buttons {
+.promo__buttons {
     padding-top: 150px;
     padding-bottom: 30px;
     justify-self: end;
     display: flex;
 }
 
-.promo_button {
+.promo__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     letter-spacing: -0.04em;
     margin-right: 10px;
     width: 96px;
@@ -51,12 +54,12 @@
     color: #FFFFFF;
 }
 
-.promo_button:last-child {
+.promo__button:last-child {
     margin-right: 0;
 }
 
 @media screen and (max-width: 1020px) {
-    .promo_title {
+    .promo__title {
         font-size: 40px;
         line-height: 52px;
     }
@@ -68,17 +71,17 @@
 }
 
 @media screen and (max-width: 768px) {
-    .promo_banner {
+    .promo__banner {
         padding-top: 350px;
     }
 
-    .promo_buttons {
+    .promo__buttons {
         padding-top: 314px;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .promo_title {
+    .promo__title {
         font-size: 29px;
         line-height: 37px;
     }
@@ -90,11 +93,11 @@
 }
 
 @media screen and (max-width: 350px) {
-    .promo_buttons {
+    .promo__buttons {
         padding-bottom: 10px;
     }
 
-    .promo_button {
+    .promo__button {
         margin-right: 8px;
         width: 82px;
         height: 26px;
@@ -103,11 +106,11 @@
 }
 
 @media screen and (max-width: 580px) {
-    .promo_banner {
+    .promo__banner {
         padding-top: 220px;
     }
 
-    .promo_buttons {
+    .promo__buttons {
         padding-top: 212px;
     }
 }
