--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -7,13 +7,13 @@
     background: #272727;
 }
 
-.techs_main-container {
+.techs__main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.techs_title {
+.techs__title {
     padding-bottom: 23px;
 
     border-bottom: #DADADA 1px solid;
@@ -23,7 +23,7 @@
     letter-spacing: -0.04em;
 }
 
-.techs_subtitle {
+.techs__subtitle {
     padding-top: 90px;
     padding-bottom: 26px;
 
@@ -34,7 +34,7 @@
     letter-spacing: -0.04em;
 }
 
-.techs_text {
+.techs__text {
     padding-bottom: 100px;
 
     max-width: 460px;
@@ -45,14 +45,14 @@
     letter-spacing: -0.04em;
 }
 
-.techs_container {
+.techs__container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     list-style: none;
     gap: 10px;
 }
 
-.techs_particle {
+.techs__particle {
     width: 90px;
     height: 60px;
 
@@ -69,7 +69,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .techs_text {
+    .techs__text {
         padding-bottom: 83px;
         font-size: 12px;
         line-height: 18px;
@@ -82,12 +82,12 @@
         padding-bottom: 90px;
     }
 
-    .techs_subtitle {
+    .techs__subtitle {
         padding-top: 80px;
         padding-bottom: 22px;
     }
 
-    .techs_particle {
+    .techs__particle {
         width: 84px;
         height: 57px;
         font-size: 12px;
@@ -96,23 +96,23 @@
 }
 
 @media screen and (max-width: 700px) {
-    .techs_container {
+    .techs__container {
         grid-template-columns: repeat(6, 1fr);
     }
 }
 
 @media screen and (max-width: 590px) {
-    .techs_container {
+    .techs__container {
         grid-template-columns: repeat(5, 1fr);
     }
 }
 
 @media screen and (max-width: 490px) {
-    .techs_container {
+    .techs__container {
         grid-template-columns: repeat(4, 1fr);
     }
 
-    .techs_subtitle {
+    .techs__subtitle {
         padding-top: 60px;
         padding-bottom: 24px;
         font-size: 30px;
@@ -121,11 +121,11 @@
 }
 
 @media screen and (max-width: 400px) {
-    .techs_container {
+    .techs__container {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .techs_title {
+    .techs__title {
         padding-bottom: 28px;
         font-size: 18px;
         line-height: 22px;
@@ -138,7 +138,7 @@
         padding-bottom: 70px;
     }
 
-    .techs_text {
+    .techs__text {
         padding-bottom: 50px;
         max-width: 292px;
         font-size: 11px;
@@ -147,7 +147,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .techs_container {
+    .techs__container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
