--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -55,7 +55,7 @@
 .me__photo {
     width: 270px;
     height: 327px;
-    background-image: url(/src/images/IMG_7994.jpg);
+    background-image: url(/src/images/IMG_7994.jpeg);
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
