--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -33,6 +33,7 @@
 }
 
 .search__input-container {
+    width: 90%;
     display: flex;
     align-items: center;
     height: 72px;
@@ -59,9 +60,17 @@
     color: #8B8B8B;
 }
 
+.search__input::placeholder {
+    transition: color 0.2s linear;
+}
+
 .search__input:focus-visible {
     outline: none;
-    color: #8B8B8B;
+    color: #FFFFFF;
+}
+
+.search__input:focus-visible::placeholder {
+    color: #FFFFFF;
 }
 
 .search__button {
