create frontend app logic

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -60,6 +60,7 @@
     color: #FFFFFF;
 
     margin-bottom: 20px;
+    transition: color 0.3s;
 }
 
 .login__input:last-child {
@@ -68,7 +69,6 @@
 
 .login__input:focus-visible {
     outline: none;
-    color: #FFFFFF;
 }
 
 .login__input_error {
@@ -76,11 +76,13 @@
 }
 
 .login__error {
-    display: none;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .login__error_visible {
-    display: inline;
+    opacity: 1;
+
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
@@ -99,6 +101,11 @@
     line-height: 17px;
     text-align: center;
     color: #FFFFFF;
+}
+
+.login__button_inactive {
+    background-color: #525252;
+    cursor: default;
 }
 
 .login__text {
