--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,4 +1,5 @@
 .register {
+    position: relative;
     max-width: 396px;
     margin: auto;
     display: flex;
@@ -60,6 +61,7 @@
     color: #FFFFFF;
 
     margin-bottom: 20px;
+    transition: color 0.3s;
 }
 
 .register__input:last-child {
@@ -68,7 +70,6 @@
 
 .register__input:focus-visible {
     outline: none;
-    color: #FFFFFF;
 }
 
 .register__input_error {
@@ -76,11 +77,12 @@
 }
 
 .register__error {
-    display: none;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .register__error_visible {
-    display: inline;
+    opacity: 1;
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
@@ -92,13 +94,19 @@
     height: 45px;
     margin-top: 69px;
     margin-bottom: 16px;
-    background: #4285F4;
+    background-color: #4285F4;
     border-radius: 3px;
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
     color: #FFFFFF;
+    transition: background-color 0.3s;
+}
+
+.register__button_inactive {
+    background-color: #525252;
+    cursor: default;
 }
 
 .register__text {
