--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,10 +1,17 @@
 .navigation {
+    visibility: hidden;
+    opacity: 0;
     position: fixed;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    transition: opacity 0.5s linear;
+}
+
+.navigation_visible {
+    z-index: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
 .navigation__background {
@@ -16,7 +23,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
-    transition: opacity 0.5s linear;
+    transition: opacity 0.2s ease;
 }
 
 .navigation__background_visible {
@@ -26,7 +33,7 @@
 .navigation__main-window {
     visibility: hidden;
     opacity: 0;
-    width: 0;
+    width: 200px;
 
     position: fixed;
     top: 0;
@@ -41,7 +48,7 @@
     justify-content: space-between;
     align-items: center;
 
-    transition: visibility 0.2s linear, width 0.2s linear, opacity 0.2s linear;
+    transition: visibility 0.2s ease, width 0.2s ease, opacity 0.2s ease;
 }
 
 .navigation__main-window_visible {
@@ -107,13 +114,6 @@
     background-image: url(/src/images/vectors/profile-icon.svg);
     width: 26px;
     height: 30px;
-}
-
-@media screen and (max-width: 768px) {
-    .navigation {
-        visibility: visible;
-        opacity: 1;
-    }
 }
 
 @media screen and (max-width: 340px) {
