--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -6,6 +6,7 @@
         -o-transform: scale(0, 0);
         transform: scale(0, 0);
     }
+
     100% {
         -webkit-transform: scale(1, 1);
         -moz-transform: scale(1, 1);
@@ -23,6 +24,7 @@
         -o-transform: scale(0, 0);
         transform: scale(0, 0);
     }
+
     30% {
         -webkit-transform: scale(0, 0);
         -moz-transform: scale(0, 0);
@@ -30,6 +32,7 @@
         -o-transform: scale(0, 0);
         transform: scale(0, 0);
     }
+
     100% {
         -webkit-transform: scale(1, 1);
         -moz-transform: scale(1, 1);
@@ -39,50 +42,62 @@
     }
 }
 
+
+
 .preloader {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
+    width: 40px;
+    height: 40px;
+    z-index: 1;
     padding: 20px;
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.preloader_hidden {
+    z-index: -1;
+    opacity: 0;
 }
 
 .preloader__container {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
 .preloader__round {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    background: #FF6838;
-    border-radius: 50px;
+    background: #4285F4;
+    border-radius: 50%;
 }
 
 .preloader__round::after,
 .preloader__round::before {
     content: '';
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 
 .preloader__round::after {
-    background: white;
+    background: #202020;
     animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
 .preloader__round::before {
     z-index: 10;
-    background: #FF6838;
+    background: #4285F4;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
