--- a/src/components/MoreButton/MoreButton.css
+++ b/src/components/MoreButton/MoreButton.css
@@ -21,6 +21,10 @@
     color: #FFFFFF;
 }
 
+.more-button_hidden {
+    display: none;
+}
+
 @media screen and (max-width: 410px) {
     .more-button__button {
         width: 240px;
